--- a/BaiTap/LUYENTAPMANG1/bai4.html
+++ b/BaiTap/LUYENTAPMANG1/bai4.html
@@ -13,9 +13,15 @@
   //   document.write(arry[i] + ' ');
   // }
   //cách 2 ////
-  let arry = [-1, 3, 4, 7, 9, 10];
-  arry.reverse();
-  document.write(arry);
+  // let arry = [-1, 3, 4, 7, 9, 10];
+  // arry.reverse();
+  // document.write(arry);
+  //Cách 3 nhập vào trong hoop thoai//
+  let  arry = [];
+  for (let i = 0; i <=3;i++){
+      let a = prompt('Mời bạn nhập các phần tử  vào : '+ i)
+      arry.push(a)
+  }document.write(arry);
 </script>
 </body>
 </html>
