--- a/BaiTap/LUYENTAPMANG1/bai5.html
+++ b/BaiTap/LUYENTAPMANG1/bai5.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-  let arry = [2,-4,-6,7,9,10];
+  let arry = ['2','-4','-6','7','9','10'];
   let dem = 0; //
   for (let i = 0;i<arry.length;i++){
     if(arry[i]<0){ // BÉ HƠN 0 LÀ SỐ ÂM//
